--- a/README.Rmd
+++ b/README.Rmd
@@ -3,8 +3,4 @@ title: "Cactification"
 output: github_document
 ---
 
-<<<<<<< HEAD
-### My solution to the aerial cactus identification (Kaggle contest)[https://www.kaggle.com/c/aerial-cactus-identification/]
-=======
-### My solution to the aerial cactus identification Kaggle contest)[https://www.kaggle.com/c/aerial-cactus-identification/]
->>>>>>> 7217177101d370b25bb41c070439dac4c4df735b
+### My solution to the aerial cactus identification [Kaggle contest[(https://www.kaggle.com/c/aerial-cactus-identification/)
