--- a/README.Rmd
+++ b/README.Rmd
@@ -3,4 +3,4 @@ title: "Cactification"
 output: github_document
 ---
 
-### My solution to the aerial cactus identification [Kaggle contest[(https://www.kaggle.com/c/aerial-cactus-identification/)
+### My solution to the aerial cactus identification [Kaggle contest](https://www.kaggle.com/c/aerial-cactus-identification/)
